rag-setup-vllm/inference-cluster/manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inference-vllm
  labels:
    app.kubernetes.io/part-of: ai-platform-vllm
    environment: inference
